@@ -4,7 +4,7 @@
 \alias{get_ga}
 \title{Core Reporting API}
 \usage{
-get_ga(profile.id, start.date = "7daysAgo", end.date = "yesterday",
+get_ga(profile.id = NULL, start.date = "7daysAgo", end.date = "yesterday",
   metrics = c("ga:users", "ga:sessions", " ga:pageviews"),
   dimensions = NULL, sort = NULL, filters = NULL, segment = NULL,
   sampling.level = NULL, start.index = NULL, max.results = NULL,
