@@ -4,11 +4,12 @@
 \alias{get_realtime}
 \title{Real Time Reporting API}
 \usage{
-get_realtime(profile.id, metrics = "rt:activeUsers", dimensions = NULL,
-  sort = NULL, filters = NULL, max.results = NULL, token)
+get_realtime(profile.id = NULL, metrics = "rt:activeUsers",
+  dimensions = NULL, sort = NULL, filters = NULL, max.results = NULL,
+  token)
 }
 \arguments{
-\item{profile.id}{integer or character. Unique table ID for retrieving Analytics data. Table ID is of the form ga:XXXX, where XXXX is the Analytics view (profile) ID. Can be obtained using the \code{\link{list_profiles}} or via the web interface Google Analytics.}
+\item{profile.id}{character. Unique table ID for retrieving Analytics data. Table ID is of the form ga:XXXX, where XXXX is the Analytics view (profile) ID. Can be obtained using the \code{\link{list_profiles}} or via the web interface Google Analytics.}
 
 \item{metrics}{character. A comma-separated list of real time metrics. E.g., \code{"rt:activeUsers"}. At least one metric must be specified.}
 
